Thu,  5 Apr 2007 09:46:36 +0200 <thp@perli.net>
        * README: ** gPodder 0.9.1 released **
        * doc/man/gpodder.1: Generated manpage for the 0.9.1 release
        * bin/gpodder: Updated version + release date for 0.9.1
        * data/messages.pot: Updated data from source files
        * data/po/*.po: Updated data from source files
        * data/po/de.po: Updated German translation for the 0.9.1 release

Thu,  5 Apr 2007 09:09:01 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Only allow alphanumeric, space, dot,
          dash and underscore characters when syncing to filesystem-based
          MP3 players; this should get rid of a lot of problems with the 
          restrictions of filesystems; thanks to Johann Uhrmann for bringing
          yet another problem with the charset problem to my attention :)

Thu,  5 Apr 2007 07:49:19 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Increment playcount from zero to one
          if we've played a podcast locally, but playcount is still zero on
          iPod

Wed,  4 Apr 2007 18:10:17 +0200 <thp@perli.net>
        * data/po/pt.po: Updated Portuguese translation from Joel Calado
          (joelcalado gmail.com)

Tue,  3 Apr 2007 16:21:26 +0200 <thp@perli.net>
        * data/po/nl.po: Updated Dutch translation from Pieter De Decker 
          (pdedecker gmail.com)

Tue,  3 Apr 2007 13:43:35 +0200 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Only display icon on unplayed items
        * src/gpodder/gpodder.py: Rename "Played" column to "New"
        * data/gpodder.glade: Rewrite text to display "New/Unplayed" column

Tue,  3 Apr 2007 13:14:02 +0200 <thp@perli.net>
        * src/gpodder/liblogger.py: Enhance the log() function to accept a 
          "sender" keyword argument that contains the object tha sends the 
          message; the message will be transformed into "(objectclass) message"
        * src/gpodder/libpodcasts.py: Add "Played" icon to the model for 